# termgrep

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  outputformats.hpp  termgrep.cpp  termgrep.hpp  test.cpp
